--- a/Moocl/frontend/package.json
+++ b/Moocl/frontend/package.json
@@ -27,7 +27,8 @@
     "vue-router": "^3.0.1",
     "vue-wordcloud": "^1.0.2",
     "vuetify": "^1.0.15",
-    "vuewordcloud": "^18.4.6"
+    "vuewordcloud": "^18.4.6",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
